# SFML-Sidescroller-Revived

./: .gitignore  CMakeLists.txt  CopyRessources.script  SFML Sidescroller.cbp  SFML Sidescroller.depend  build_from_jenkins.sh  main.cpp
Data/: PackageSpecs.yml  config.yml
Data/Script/: config.lua  config.lua_default
Manager/SFML-Sidescroller-Manager/: SFML-Sidescroller-Manager.pro  mainwindow.h  mainwindow.ui
Manager/SFML-Sidescroller-Manager-build-desktop-Qt_4_8_2_in_PATH__System__Release/: Makefile  SFML-Sidescroller-Manager  moc_mainwindow.cpp  ui_mainwindow.h
Server/: getScore.php  publishScore.php  scores.csv
cmake/: FindBox2D.cmake
include/: CBackgroundMusic.h  CConfig.h  CEntityManager.h  CMenu.h  CScorePopup.h  CSingleton.h  CSoundEffect.h  Entity.h  PausableClock.hpp  PhysicsDefinitions.hpp
include/CApp/: CApp.h
include/CBackground/: CBackground.h
include/CMenu/: Button.h  CContainer.h  CContainerManager.h  Image.h  Load.h  Slider.h  Text.h
include/Container/: CAsteroidContainer.h  CBulletContainer.h
include/Explosions/: CExplosion.h  CExplosionManager.h  CParticle.h
include/Manager/: CFontManager.h  CPhysicsManager.h  CPowerupManager.h  CTextureManager.h  CWebManager.h
include/Player/: CPLayer.h
src/: CApp.cpp  CBackgroundMusic.cpp  CConfig.cpp  CEntityManager.cpp  CScorePopup.cpp  CSoundEffect.cpp  Entity.cpp
src/CApp/: onEvent.cpp  onExit.cpp  onInit.cpp  onRender.cpp  onUpdate.cpp
src/CBackground/: CBackground.cpp
src/CMenu/: Button.cpp  CContainer.cpp  CContainerManager.cpp  CMenu.cpp  CMenu_LoadMenu.cpp  CMenu_OnButtonClick.cpp  Image.cpp  Load.cpp  Slider.cpp  Text.cpp
src/CMenu/Load/: Config.cpp  Credits.cpp  GameOver.cpp  HowTo.cpp  MainMenu.cpp  PauseMenu.cpp  ViewHighscores.cpp
src/Container/: CAsteroidContainer.cpp  CBulletContainer.cpp
src/Explosions/: CExplosion.cpp  CExplosionManager.cpp  CParticle.cpp
src/MD5/: hl_md5.cpp  hl_md5wrapper.cpp  hl_sha1.cpp  hl_sha1wrapper.cpp  hl_sha256.cpp  hl_sha256wrapper.cpp  hl_sha2ext.cpp  hl_sha384wrapper.cpp  hl_sha512wrapper.cpp  hl_wrapperfactory.cpp
src/Manager/: CFontManager.cpp  CPhysicsManager.cpp  CPowerupManager.cpp  CTextureManager.cpp  CWebManager.cpp
src/Player/: CPLayer.cpp
